Fixed popup message only showing for mods that were set as enabled in profile.